--- a/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -74,13 +74,13 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 CurrentScalingGridSize=0
 
 [MRU]
-MRUItem0=/Game/_Scenes/ClownBall
-MRUItem1=/Game/_Scenes/Maze
-MRUItem2=/Game/_Scenes/Bowling
-MRUItem3=/Game/_Scenes/VR_Menu
-MRUItem4=/Game/_Scenes/IntroScene
-MRUItem5=/Game/_Scenes/KnifeThrow
-MRUItem6=/Game/_Scenes/HeartBall
+MRUItem0=/Game/_Scenes/KnifeThrow
+MRUItem1=/Game/_Scenes/HeartBall
+MRUItem2=/Game/_Scenes/ClownBall
+MRUItem3=/Game/_Scenes/Maze
+MRUItem4=/Game/_Scenes/Bowling
+MRUItem5=/Game/_Scenes/VR_Menu
+MRUItem6=/Game/_Scenes/IntroScene
 MRUItem7=/Game/VirtualRealityBP/Maps/MotionControllerMap
 
 [LightingBuildOptions]
@@ -94,7 +94,7 @@ ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.SelectedPaths=/Game/Blueprints/GameInstance
 ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.SelectedPaths=/Game/Blueprints/HeartBall
-ContentBrowserTab1.SelectedPaths=/Game/FBX_Models/Maze/WhiskeyBottle
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints/KnifeThrow
 None=======
 None=======
 None=======
@@ -147,7 +147,7 @@ LastLevel=/Game/_Scenes/Maze
 LastLevel=/Game/_Scenes/HeartBall
 LastLevel=/Game/_Scenes/Bowling
 LastLevel=/Game/_Scenes/VR_Menu
-LastLevel=/Game/_Scenes/ClownBall
+LastLevel=/Game/_Scenes/KnifeThrow
 None=======
 None=======
 None=======
@@ -2219,6 +2219,12 @@ None=======
 None=======
 None=======
 None=======
+BP_Firehearts_C.Tick=True
+BP_Firehearts_C.Rendering=True
+BP_Firehearts_C.Replication=True
+BP_Firehearts_C.Input=True
+BP_Firehearts_C.Actor=True
+BP_Firehearts_C.TransformCommon=True
 
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -2229,7 +2235,7 @@ PostProcessVolume="\"Object.PostProcessVolumeSettings.Settings.ColorSaturationSh
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
 Object="\"Object.LightmassSettings\" "
 Object=
-Object="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[3]\" \"Object.ImportSettings.AssetImportData\" \"Object.ImportSettings.AssetImportData.Object.File Path\" "
+Object=
 None=======
 None=======
 None=======
@@ -2294,6 +2300,19 @@ BP_EyeBallSpawner_C=
 BP_KnifeSpawner_C=
 
 [PlacementMode]
+RecentlyPlaced=/Game/FBX_Models/KnifeThrow/Axe/Axe_StaticMesh.Axe_StaticMesh;
+RecentlyPlaced=/Game/FBX_Models/KnifeThrow/Axe/AxePieces/AxeTexV1_Cylinder_023.AxeTexV1_Cylinder_023;
+RecentlyPlaced=/Game/FBX_Models/KnifeThrow/Axe/AxePieces/AxeTexV1_Cylinder_013.AxeTexV1_Cylinder_013;
+RecentlyPlaced=/Game/FBX_Models/KnifeThrow/Axe/AxePieces/AxeTexV1_Cylinder_004.AxeTexV1_Cylinder_004;
+RecentlyPlaced=/Game/FBX_Models/KnifeThrow/Axe/AxePieces/AxeTexV1_Cylinder_003.AxeTexV1_Cylinder_003;
+RecentlyPlaced=/Game/FBX_Models/KnifeThrow/Axe/AxePieces/AxeTexV1_Cylinder_002.AxeTexV1_Cylinder_002;
+RecentlyPlaced=/Game/FBX_Models/KnifeThrow/Axe/AxePieces/AxeTexV1_Cylinder_001.AxeTexV1_Cylinder_001;
+RecentlyPlaced=/Game/FBX_Models/KnifeThrow/Axe/AxePieces/AxeTexV1_Cylinder_000.AxeTexV1_Cylinder_000;
+RecentlyPlaced=/Game/FBX_Models/KnifeThrow/Axe/AxePieces/AxeTexV1_Cube_004.AxeTexV1_Cube_004;
+RecentlyPlaced=/Game/FBX_Models/KnifeThrow/Axe/AxePieces/AxeTexV1_Cube_003.AxeTexV1_Cube_003;
+RecentlyPlaced=/Game/FBX_Models/KnifeThrow/Axe/AxePieces/AxeTexV1_Cube_001.AxeTexV1_Cube_001;
+RecentlyPlaced=/Script/Engine.TargetPoint;/Engine/Transient.ActorFactoryTargetPoint_0
+RecentlyPlaced=/Game/Blueprints/HeartBall/BP_Firehearts.BP_Firehearts;
 RecentlyPlaced=/Game/Sprites_Decals/Maze/RailTracks/IMG_1406_Sprite.IMG_1406_Sprite;
 RecentlyPlaced=/Game/Materials/_GeneralUse/Cement_Speckle1/Flat_Cement_Speckle1_Mat.Flat_Cement_Speckle1_Mat;
 RecentlyPlaced=/Game/Materials/_GeneralUse/WoodenFloorSlats/Flat_WoodenFloorSlats_Mat.Flat_WoodenFloorSlats_Mat;
@@ -2301,69 +2320,6 @@ RecentlyPlaced=/Game/Materials/_GeneralUse/WoodGrainFloor/Flat_WoodGrainFloor_Ma
 RecentlyPlaced=/Game/Materials/Maze/Crate_Box/Flat_CrateBox_Mat.Flat_CrateBox_Mat;
 RecentlyPlaced=/Game/Materials/Maze/BarrelV1/Flat_BarrelV1Mat.Flat_BarrelV1Mat;
 RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
-RecentlyPlaced=/Game/FBX_Models/Maze/Ringmaster_Human/Suit/Drinking/Ringmaster_SittingDrinking_Anim.Ringmaster_SittingDrinking_Anim;
-RecentlyPlaced=/Game/FBX_Models/Maze/Chair/Chair_StaticMesh.Chair_StaticMesh;
-RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Game/FBX_Models/Maze/Chest/Chest_StaticMesh.Chest_StaticMesh;
-RecentlyPlaced=/Game/FBX_Models/Maze/Chest/ChestV1_Textured_Cube.ChestV1_Textured_Cube;
-RecentlyPlaced=/Game/FBX_Models/Maze/Chest/ChestV1_Textured_Cylinder.ChestV1_Textured_Cylinder;
-RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
-RecentlyPlaced=/Game/FBX_Models/Maze/WhiskeyBottle/WhiskeybottleV1.WhiskeybottleV1;
-RecentlyPlaced=/Game/FBX_Models/Maze/Cup/CupV1.CupV1;
-RecentlyPlaced=/Game/InfinityBladeEffects/Effects/FX_Ambient/Lighting/FX_CandleFlame.FX_CandleFlame;
-RecentlyPlaced=/Game/InfinityBladeEffects/Effects/FX_Ambient/Fire/P_Fire_Torch_01.P_Fire_Torch_01;
-RecentlyPlaced=/Game/InfinityBladeEffects/Effects/FX_Ambient/Fire/P_Fire_Torch_Red.P_Fire_Torch_Red;
-RecentlyPlaced=/Game/FBX_Models/Maze/Candle/CandleTex.CandleTex;
-RecentlyPlaced=/Game/Blueprints/Menu/BP_HeartBall_Highscore.BP_HeartBall_Highscore;
-RecentlyPlaced=/Game/Blueprints/HeartBall/BP_HeartBallScoreDisplay.BP_HeartBallScoreDisplay;
-RecentlyPlaced=/Game/Blueprints/HeartBall/BP_HeartBall_Score_10.BP_HeartBall_Score_10;
-RecentlyPlaced=/Game/Blueprints/KnifeThrow/BP_AxeSpawner.BP_AxeSpawner;
-RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
-RecentlyPlaced=/Game/Blueprints/KnifeThrow/BP_KnifeSpawner.BP_KnifeSpawner;
-RecentlyPlaced=/Game/Blueprints/HeartBall/BP_HeartBallSpawner.BP_HeartBallSpawner;
-RecentlyPlaced=/Game/Blueprints/ClownBall/BP_EyeBallSpawner.BP_EyeBallSpawner;
-RecentlyPlaced=/Game/Blueprints/Bowling/BP_BowlingBallSpawner.BP_BowlingBallSpawner;
-RecentlyPlaced=/Game/Blueprints/Bowling/BP_BowlingScore.BP_BowlingScore;
-RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Game/FBX_Models/Maze/WhiskeyBottle/WhiskeybottleV1.WhiskeybottleV1;
-RecentlyPlaced=/Game/Blueprints/Maze/BP__BottlesRandomSpawner.BP__BottlesRandomSpawner;
-RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
-RecentlyPlaced=/Game/Blueprints/Bowling/BP_BallSpawner.BP_BallSpawner;
-RecentlyPlaced=/Game/FBX_Models/Bowling/FearHead/FearBall_StaticMesh.FearBall_StaticMesh;
-RecentlyPlaced=/Game/FBX_Models/Bowling/FearHead/Head_FearV1ReSetPivot_severedhead_fearv1Mesh.Head_FearV1ReSetPivot_severedhead_fearv1Mesh;
-RecentlyPlaced=/Game/FBX_Models/Bowling/FearHead/Head_FearV1ReSetPivot_low-polyMesh.Head_FearV1ReSetPivot_low-polyMesh;
-RecentlyPlaced=/Game/FBX_Models/Bowling/FearHead/Head_FearV1ReSetPivot_eyebrow009Mesh.Head_FearV1ReSetPivot_eyebrow009Mesh;
-RecentlyPlaced=/Game/FBX_Models/Bowling/FearHead/Head_FearV1ReSetPivot_teeth_baseMesh.Head_FearV1ReSetPivot_teeth_baseMesh;
-RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
-RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Game/FBX_Models/Maze/WhiskeyBottle/WhiskeybottleV1.WhiskeybottleV1;
-RecentlyPlaced=/Game/Sprites_Decals/Maze/RailTracks/RailTrack_Straight_Sprite.RailTrack_Straight_Sprite;
-RecentlyPlaced=/Game/Sprites_Decals/IntroScene/CarnEvil_Banner_Original/LOGO_BLACK_Sprite.LOGO_BLACK_Sprite;
-RecentlyPlaced=/Game/FBX_Models/Maze/Tunnel/MediumTunnel_2/MediumTunnel_2_StaticMesh.MediumTunnel_2_StaticMesh;
-RecentlyPlaced=/Game/FBX_Models/Maze/Tunnel/MediumTunnel_1/MediumTunnel_1_StaticMesh.MediumTunnel_1_StaticMesh;
-RecentlyPlaced=/Game/FBX_Models/Maze/Tunnel/ShortTunnel_2/ShortTunnel_2_StaticMesh.ShortTunnel_2_StaticMesh;
-RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
-RecentlyPlaced=/Game/FBX_Models/Maze/Tunnel/ShortTunnel_1/ShortTunnel_1_StaticMesh.ShortTunnel_1_StaticMesh;
-RecentlyPlaced=/Game/FBX_Models/Maze/Tunnel/ShortTunnel/ShortTunnel_StaticMesh.ShortTunnel_StaticMesh;
-RecentlyPlaced=/Game/FBX_Models/Maze/Tunnel/LongTunnel/LongTunnel_StaticMesh.LongTunnel_StaticMesh;
-RecentlyPlaced=/Game/Materials/_GeneralUse/SpiderWeb_1/Spiderweb_1_Mat.Spiderweb_1_Mat;
-RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Game/FBX_Models/Maze/Cage/Cage_StaticMesh.Cage_StaticMesh;
-RecentlyPlaced=/Game/FBX_Models/Maze/Cage/Cage_Pieces/CageTexV1_Torus_006.CageTexV1_Torus_006;
-RecentlyPlaced=/Game/FBX_Models/Maze/Cage/Cage_Pieces/CageTexV1_Torus_005.CageTexV1_Torus_005;
-RecentlyPlaced=/Game/FBX_Models/Maze/Cage/Cage_Pieces/CageTexV1_Torus_004.CageTexV1_Torus_004;
-RecentlyPlaced=/Game/FBX_Models/Maze/Cage/Cage_Pieces/CageTexV1_Torus_003.CageTexV1_Torus_003;
-RecentlyPlaced=/Game/FBX_Models/Maze/Cage/Cage_Pieces/CageTexV1_Torus_002.CageTexV1_Torus_002;
-RecentlyPlaced=/Game/FBX_Models/Maze/Cage/Cage_Pieces/CageTexV1_Torus_001.CageTexV1_Torus_001;
-RecentlyPlaced=/Game/FBX_Models/Maze/Cage/Cage_Pieces/CageTexV1_Torus.CageTexV1_Torus;
-RecentlyPlaced=/Game/Materials/Bowling/AngryBall/Flat_AngryBall_Hair__Mat.Flat_AngryBall_Hair__Mat;
-RecentlyPlaced=/Game/Materials/Bowling/AngryBall/Flat_AngryBall_Eyebrows__Mat.Flat_AngryBall_Eyebrows__Mat;
-RecentlyPlaced=/Game/FBX_Models/Bowling/AngryHead/AngryBall_StaticMesh.AngryBall_StaticMesh;
-RecentlyPlaced=/Game/FBX_Models/Bowling/AngryHead/HeadAngryV1ReSetPivot_short04Mesh.HeadAngryV1ReSetPivot_short04Mesh;
-RecentlyPlaced=/Game/FBX_Models/Bowling/AngryHead/HeadAngryV1ReSetPivot_severedhead_angryv1Mesh.HeadAngryV1ReSetPivot_severedhead_angryv1Mesh;
-RecentlyPlaced=/Game/FBX_Models/Bowling/AngryHead/HeadAngryV1ReSetPivot_high-polyMesh.HeadAngryV1ReSetPivot_high-polyMesh;
-RecentlyPlaced=/Game/FBX_Models/Bowling/AngryHead/HeadAngryV1ReSetPivot_eyebrow008Mesh.HeadAngryV1ReSetPivot_eyebrow008Mesh;
-RecentlyPlaced=/Game/FBX_Models/Bowling/AngryHead/HeadAngryV1ReSetPivot_teeth_shape02Mesh.HeadAngryV1ReSetPivot_teeth_shape02Mesh;
 None=======
 None=======
 None=======
@@ -2375,7 +2331,7 @@ BP__BottlesRandomSpawner_C=
 LastLogListing=LoadErrors
 
 [RootWindow]
-ScreenPosition=X=-9.000 Y=0.000
+ScreenPosition=X=6.000 Y=34.000
 WindowSize=X=1577.000 Y=821.000
 InitiallyMaximized=True
 
@@ -3311,6 +3267,7 @@ bConvertSceneUnit=False
 None=======
 None=======
 None=======
+/Game/Blueprints/HeartBall/BP_Firehearts.BP_Firehearts=0
 
 [MaterialEditor]
 PrimType=1
