--- a/CIU_CarnEvil_Final/Config/DefaultEngine.ini
+++ b/CIU_CarnEvil_Final/Config/DefaultEngine.ini
@@ -8,7 +8,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Game/Blueprints/GameInstance/BP_GameInstance.BP_GameInstance_C
 GameDefaultMap=/Game/_Scenes/VR_Menu.VR_Menu
 ServerDefaultMap=/Engine/Maps/Entry
-GlobalDefaultGameMode=None
+GlobalDefaultGameMode=/Game/Blueprints/_GeneralUse/BP_VR_Gamemode.BP_VR_Gamemode_C
 GlobalDefaultServerGameMode=None
 
 [/Script/Engine.Engine]
@@ -107,4 +107,5 @@ AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 +PhysicalSurfaces=(Type=SurfaceType1,Name="StickySurface")
+
 
