--- a/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -77,10 +77,10 @@ GridEnabled=False
 CurrentPosGridSize=1
 
 [MRU]
-MRUItem0=/Game/_Scenes/HeartBall
-MRUItem1=/Game/_Scenes/Maze
-MRUItem2=/Game/_Scenes/KnifeThrow
-MRUItem3=/Game/_Scenes/ClownBall
+MRUItem0=/Game/_Scenes/ClownBall
+MRUItem1=/Game/_Scenes/HeartBall
+MRUItem2=/Game/_Scenes/Maze
+MRUItem3=/Game/_Scenes/KnifeThrow
 MRUItem4=/Game/_Scenes/Bowling
 MRUItem5=/Game/_Scenes/VR_Menu
 MRUItem6=/Game/_Scenes/IntroScene
@@ -97,7 +97,7 @@ ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.SelectedPaths=/Game/Blueprints/GameInstance
 ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.SelectedPaths=/Game/Blueprints/HeartBall
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints/HeartBall
+ContentBrowserTab1.SelectedPaths=/Game
 None=======
 None=======
 None=======
@@ -150,7 +150,7 @@ LastLevel=/Game/_Scenes/Maze
 LastLevel=/Game/_Scenes/HeartBall
 LastLevel=/Game/_Scenes/Bowling
 LastLevel=/Game/_Scenes/VR_Menu
-LastLevel=/Game/_Scenes/HeartBall
+LastLevel=/Game/_Scenes/ClownBall
 None=======
 None=======
 None=======
@@ -159,6 +159,8 @@ None=======
 [AssetEditorManager]
 CleanShutdown=True
 None=======
+OpenAssetsAtExit=/Game/Blueprints/ClownBall/BP_RespawnBall_PickUp.BP_RespawnBall_PickUp
+OpenAssetsAtExit=/Game/Blueprints/ClownBall/BP_BallSpawner.BP_BallSpawner
 
 [PluginBrowser]
 InstalledPlugins=Substance
@@ -2283,11 +2285,40 @@ BP_BatSpawner_C.Input=True
 BP_BatSpawner_C.Actor=True
 BP_BatSpawner_C.TransformCommon=True
 BP_HeartSpawner_C.Default=True
+BP_ClownBallTarget_Base_C.TransformCommon=True
+BP_ClownBallTarget_Base_C.Default=True
+BP_ClownBallTarget_Base_C.Rendering=True
+BP_ClownBallTarget_Base_C.Input=True
+BP_ClownBallTarget_Base_C.Actor=True
+BP_ClownBallTarget_Base_C.Tick=True
+BP_ClownBallTarget_Base_C.Replication=True
+BP_ClownBallScoreDisplay_C.TransformCommon=True
+BP_ClownBallScoreDisplay_C.Rendering=True
+BP_ClownBallScoreDisplay_C.Input=True
+BP_ClownBallScoreDisplay_C.Actor=True
+BP_DestroyBall_Base_C.Tick=True
+BP_DestroyBall_Base_C.Rendering=False
+BP_DestroyBall_Base_C.Replication=True
+BP_DestroyBall_Base_C.Input=True
+BP_DestroyBall_Base_C.Actor=True
+BP_DestroyBall_Base_C.TransformCommon=True
+BP_RespawnEye_Base_C.Tick=True
+BP_RespawnEye_Base_C.Rendering=True
+BP_RespawnEye_Base_C.Replication=True
+BP_RespawnEye_Base_C.Input=True
+BP_RespawnEye_Base_C.Actor=True
+BP_RespawnEye_Base_C.TransformCommon=True
+BP_RespawnBall_PickUp_C.Tick=True
+BP_RespawnBall_PickUp_C.Rendering=True
+BP_RespawnBall_PickUp_C.Replication=True
+BP_RespawnBall_PickUp_C.Input=True
+BP_RespawnBall_PickUp_C.Actor=True
+BP_RespawnBall_PickUp_C.TransformCommon=True
 
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 NavModifierVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-Volume=
+Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PostProcessVolume="\"Object.PostProcessVolumeSettings.Settings.ColorSaturationShadows\" \"Object.PostProcessVolumeSettings.Settings.FilmWhitePoint\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
@@ -2323,7 +2354,7 @@ PhysicsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.ImportSettings.AssetImportData\" \"Object.ImportSettings.AssetImportData.Object.File Path\" "
 StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" \"Object.ImportSettings.AssetImportData\" \"Object.ImportSettings.AssetImportData.Object.File Path\" "
 StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[1]\" "
-StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[3]\" \"Object.ImportSettings.AssetImportData\" \"Object.ImportSettings.AssetImportData.Object.File Path\" "
+StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.ImportSettings.AssetImportData\" \"Object.ImportSettings.AssetImportData.Object.File Path\" "
 BP_Heart_C=
 StaticMeshActor=
 REINST_BP_Heart_C_514="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
@@ -2361,9 +2392,16 @@ BP_Ride_RandomSpawnerJumpScare_C=
 BP_Ride_RandomSpawnerBottles_C="\"Object.Default.ActorList\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/Blueprints/ClownBall/BP_RespawnBall_PickUp.BP_RespawnBall_PickUp;
+RecentlyPlaced=/Game/FBX_Models/Menu/Dome/BubbleV1.BubbleV1;
+RecentlyPlaced=/Game/Blueprints/ClownBall/BP_RespawnEye_Base.BP_RespawnEye_Base;
+RecentlyPlaced=/Game/Blueprints/ClownBall/BP_DestroyBall_Base.BP_DestroyBall_Base;
+RecentlyPlaced=/Game/Blueprints/HeartBall/BP_ClownBallScoreDisplay.BP_ClownBallScoreDisplay;
+RecentlyPlaced=/Game/Blueprints/ClownBall/BP_ClownBallTarget_Base.BP_ClownBallTarget_Base;
+RecentlyPlaced=/Game/Blueprints/ClownBall/BP_BallSpawner.BP_BallSpawner;
 RecentlyPlaced=/Game/Blueprints/HeartBall/BP_BatSpawner.BP_BatSpawner;
 RecentlyPlaced=/Game/Blueprints/HeartBall/BP_HeartSpawner.BP_HeartSpawner;
-RecentlyPlaced=/Game/Blueprints/HeartBall/BP_ScoreDisplay.BP_ScoreDisplay;
+RecentlyPlaced=/Game/Blueprints/HeartBall/BP_HeartBallScoreDisplay.BP_HeartBallScoreDisplay;
 RecentlyPlaced=/Game/Blueprints/HeartBall/BP_HeartBallTarget_Base.BP_HeartBallTarget_Base;
 RecentlyPlaced=/Game/Blueprints/Maze/BP_Ride_RandomSpawnerBottles.BP_Ride_RandomSpawnerBottles;
 RecentlyPlaced=/Game/Blueprints/Maze/BP_Ride_RandomSpawnerJumpScare.BP_Ride_RandomSpawnerJumpScare;
@@ -2374,13 +2412,6 @@ RecentlyPlaced=/Game/FBX_Models/KnifeThrow/Axe/AxePieces/AxeTexV1_Cylinder_013.A
 RecentlyPlaced=/Game/FBX_Models/KnifeThrow/Axe/AxePieces/AxeTexV1_Cylinder_004.AxeTexV1_Cylinder_004;
 RecentlyPlaced=/Game/FBX_Models/KnifeThrow/Axe/AxePieces/AxeTexV1_Cylinder_003.AxeTexV1_Cylinder_003;
 RecentlyPlaced=/Game/FBX_Models/KnifeThrow/Axe/AxePieces/AxeTexV1_Cylinder_002.AxeTexV1_Cylinder_002;
-RecentlyPlaced=/Game/FBX_Models/KnifeThrow/Axe/AxePieces/AxeTexV1_Cylinder_001.AxeTexV1_Cylinder_001;
-RecentlyPlaced=/Game/FBX_Models/KnifeThrow/Axe/AxePieces/AxeTexV1_Cylinder_000.AxeTexV1_Cylinder_000;
-RecentlyPlaced=/Game/FBX_Models/KnifeThrow/Axe/AxePieces/AxeTexV1_Cube_004.AxeTexV1_Cube_004;
-RecentlyPlaced=/Game/FBX_Models/KnifeThrow/Axe/AxePieces/AxeTexV1_Cube_003.AxeTexV1_Cube_003;
-RecentlyPlaced=/Game/FBX_Models/KnifeThrow/Axe/AxePieces/AxeTexV1_Cube_001.AxeTexV1_Cube_001;
-RecentlyPlaced=/Script/Engine.TargetPoint;/Engine/Transient.ActorFactoryTargetPoint_0
-RecentlyPlaced=/Game/Blueprints/HeartBall/BP_Firehearts.BP_Firehearts;
 None=======
 None=======
 None=======
@@ -2389,7 +2420,7 @@ None=======
 BP__BottlesRandomSpawner_C=
 
 [MessageLog]
-LastLogListing=LoadErrors
+LastLogListing=FBXImport
 
 [RootWindow]
 ScreenPosition=X=20.000 Y=9.000
@@ -2417,7 +2448,7 @@ FBXAnim=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 GenericImport=C:/Users/Matt/Desktop/IMG_1406.PNG
 GenericImport=C:/Users/Matt/Desktop/FearBall_Maps/Skin/FearBall_AmbientOcclusionMap.png
 GenericImport=C:/Users/Matt/Desktop/AngryBall_Mat/Angryteeth/Angryteeth_AmbientOcclusionMap.png
-GenericImport=C:/Users/Matt/Desktop/WhiskeybottleV1.fbx
+GenericImport=F:/_CIU/_FinalProjectWork/_Original Assets/MenuWork/BubbleV1.fbx
 None=======
 None=======
 None=======
@@ -3394,6 +3425,11 @@ None=======
 /Game/Blueprints/HeartBall/BP_ScoreDisplay.BP_ScoreDisplay=0
 /Game/Blueprints/HeartBall/BP_HeartSpawner.BP_HeartSpawner=0
 /Game/Blueprints/HeartBall/BP_BatSpawner.BP_BatSpawner=0
+/Game/Blueprints/ClownBall/BP_ClownBallTarget_Base.BP_ClownBallTarget_Base=0
+/Game/Blueprints/ClownBall/BP_BallSpawner.BP_BallSpawner=0
+/Game/Blueprints/HeartBall/BP_DestroyBall_Base.BP_DestroyBall_Base=0
+/Game/Blueprints/ClownBall/BP_RespawnEye_Base.BP_RespawnEye_Base=0
+/Game/FBX_Models/Menu/Dome/BubbleV1.BubbleV1=0
 
 [MaterialEditor]
 PrimType=1
