--- a/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -77,12 +77,12 @@ GridEnabled=False
 CurrentPosGridSize=1
 
 [MRU]
-MRUItem0=/Game/_Scenes/ClownBall
-MRUItem1=/Game/_Scenes/HeartBall
-MRUItem2=/Game/_Scenes/Maze
-MRUItem3=/Game/_Scenes/KnifeThrow
-MRUItem4=/Game/_Scenes/Bowling
-MRUItem5=/Game/_Scenes/VR_Menu
+MRUItem0=/Game/_Scenes/VR_Menu
+MRUItem1=/Game/_Scenes/ClownBall
+MRUItem2=/Game/_Scenes/HeartBall
+MRUItem3=/Game/_Scenes/Maze
+MRUItem4=/Game/_Scenes/KnifeThrow
+MRUItem5=/Game/_Scenes/Bowling
 MRUItem6=/Game/_Scenes/IntroScene
 MRUItem7=/Game/VirtualRealityBP/Maps/MotionControllerMap
 
@@ -97,7 +97,7 @@ ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.SelectedPaths=/Game/Blueprints/GameInstance
 ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.SelectedPaths=/Game/Blueprints/HeartBall
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/Audio/_GeneralUse
 None=======
 None=======
 None=======
@@ -150,7 +150,7 @@ LastLevel=/Game/_Scenes/Maze
 LastLevel=/Game/_Scenes/HeartBall
 LastLevel=/Game/_Scenes/Bowling
 LastLevel=/Game/_Scenes/VR_Menu
-LastLevel=/Game/_Scenes/ClownBall
+LastLevel=/Game/_Scenes/VR_Menu
 None=======
 None=======
 None=======
@@ -159,8 +159,6 @@ None=======
 [AssetEditorManager]
 CleanShutdown=True
 None=======
-OpenAssetsAtExit=/Game/Blueprints/ClownBall/BP_RespawnBall_PickUp.BP_RespawnBall_PickUp
-OpenAssetsAtExit=/Game/Blueprints/ClownBall/BP_BallSpawner.BP_BallSpawner
 
 [PluginBrowser]
 InstalledPlugins=Substance
@@ -2420,12 +2418,12 @@ None=======
 BP__BottlesRandomSpawner_C=
 
 [MessageLog]
-LastLogListing=FBXImport
+LastLogListing=LoadErrors
 
 [RootWindow]
-ScreenPosition=X=20.000 Y=9.000
+ScreenPosition=X=6.000 Y=17.000
 WindowSize=X=1577.000 Y=821.000
-InitiallyMaximized=False
+InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -2448,7 +2446,7 @@ FBXAnim=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 GenericImport=C:/Users/Matt/Desktop/IMG_1406.PNG
 GenericImport=C:/Users/Matt/Desktop/FearBall_Maps/Skin/FearBall_AmbientOcclusionMap.png
 GenericImport=C:/Users/Matt/Desktop/AngryBall_Mat/Angryteeth/Angryteeth_AmbientOcclusionMap.png
-GenericImport=F:/_CIU/_FinalProjectWork/_Original Assets/MenuWork/BubbleV1.fbx
+GenericImport=C:/Users/Matt/Desktop/JP_Demented circus track (progress mix 1).wav
 None=======
 None=======
 None=======
@@ -3430,6 +3428,8 @@ None=======
 /Game/Blueprints/HeartBall/BP_DestroyBall_Base.BP_DestroyBall_Base=0
 /Game/Blueprints/ClownBall/BP_RespawnEye_Base.BP_RespawnEye_Base=0
 /Game/FBX_Models/Menu/Dome/BubbleV1.BubbleV1=0
+/Game/_Scenes/VR_Menu.VR_Menu:PersistentLevel.AmbientSound_Circus_RightPA2.AmbientSound_Circus_RightPA2_SoundCue=0
+/Game/_Scenes/VR_Menu.VR_Menu:PersistentLevel.AmbientSound_Circus_RightPA.AmbientSound_Circus_RightPA_SoundCue=0
 
 [MaterialEditor]
 PrimType=1
