--- a/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -77,12 +77,12 @@ GridEnabled=False
 CurrentPosGridSize=1
 
 [MRU]
-MRUItem0=/Game/_Scenes/VR_Menu
-MRUItem1=/Game/_Scenes/ClownBall
-MRUItem2=/Game/_Scenes/HeartBall
-MRUItem3=/Game/_Scenes/Maze
-MRUItem4=/Game/_Scenes/KnifeThrow
-MRUItem5=/Game/_Scenes/Bowling
+MRUItem0=/Game/_Scenes/Bowling
+MRUItem1=/Game/_Scenes/VR_Menu
+MRUItem2=/Game/_Scenes/ClownBall
+MRUItem3=/Game/_Scenes/HeartBall
+MRUItem4=/Game/_Scenes/Maze
+MRUItem5=/Game/_Scenes/KnifeThrow
 MRUItem6=/Game/_Scenes/IntroScene
 MRUItem7=/Game/VirtualRealityBP/Maps/MotionControllerMap
 
@@ -97,7 +97,7 @@ ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.SelectedPaths=/Game/Blueprints/GameInstance
 ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.SelectedPaths=/Game/Blueprints/HeartBall
-ContentBrowserTab1.SelectedPaths=/Game/Audio/_GeneralUse
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Bowling
 None=======
 None=======
 None=======
@@ -150,7 +150,7 @@ LastLevel=/Game/_Scenes/Maze
 LastLevel=/Game/_Scenes/HeartBall
 LastLevel=/Game/_Scenes/Bowling
 LastLevel=/Game/_Scenes/VR_Menu
-LastLevel=/Game/_Scenes/VR_Menu
+LastLevel=/Game/_Scenes/Bowling
 None=======
 None=======
 None=======
@@ -183,7 +183,7 @@ BP_PickupCube_C.Cooking=True
 BP_PickupCube_C.Input=True
 BP_PickupCube_C.Actor=True
 StaticMeshActor.TransformCommon=True
-StaticMeshActor.StaticMesh=False
+StaticMeshActor.StaticMesh=True
 StaticMeshActor.Materials=True
 StaticMeshActor.Physics=True
 StaticMeshActor.Collision=True
@@ -2312,11 +2312,23 @@ BP_RespawnBall_PickUp_C.Replication=True
 BP_RespawnBall_PickUp_C.Input=True
 BP_RespawnBall_PickUp_C.Actor=True
 BP_RespawnBall_PickUp_C.TransformCommon=True
+BP_DestroyBallGutter_Base_C.Tick=True
+BP_DestroyBallGutter_Base_C.Rendering=True
+BP_DestroyBallGutter_Base_C.Replication=True
+BP_DestroyBallGutter_Base_C.Input=True
+BP_DestroyBallGutter_Base_C.Actor=True
+BP_DestroyBallGutter_Base_C.TransformCommon=True
+BP_DestroyBallFloorBase_C.TransformCommon=True
+BP_DestroyBallFloorBase_C.Rendering=True
+BP_DestroyBallFloorBase_C.Input=True
+BP_DestroyBallFloorBase_C.Actor=True
+BP_DestroyBallFloorBase_C.Tick=True
+BP_DestroyBallFloorBase_C.Replication=True
 
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 NavModifierVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Volume="\"Object.PostProcessVolumeSettings.Settings.ColorSaturationShadows\" \"Object.PostProcessVolumeSettings.Settings.FilmWhitePoint\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PostProcessVolume="\"Object.PostProcessVolumeSettings.Settings.ColorSaturationShadows\" \"Object.PostProcessVolumeSettings.Settings.FilmWhitePoint\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
@@ -2352,7 +2364,7 @@ PhysicsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.ImportSettings.AssetImportData\" \"Object.ImportSettings.AssetImportData.Object.File Path\" "
 StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" \"Object.ImportSettings.AssetImportData\" \"Object.ImportSettings.AssetImportData.Object.File Path\" "
 StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[1]\" "
-StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.ImportSettings.AssetImportData\" \"Object.ImportSettings.AssetImportData.Object.File Path\" "
+StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" \"Object.ImportSettings.AssetImportData\" \"Object.ImportSettings.AssetImportData.Object.File Path\" "
 BP_Heart_C=
 StaticMeshActor=
 REINST_BP_Heart_C_514="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
@@ -2390,26 +2402,26 @@ BP_Ride_RandomSpawnerJumpScare_C=
 BP_Ride_RandomSpawnerBottles_C="\"Object.Default.ActorList\" "
 
 [PlacementMode]
-RecentlyPlaced=/Game/Blueprints/ClownBall/BP_RespawnBall_PickUp.BP_RespawnBall_PickUp;
+RecentlyPlaced=/Game/Blueprints/Bowling/BP_DestroyBallFloorBase.BP_DestroyBallFloorBase;
+RecentlyPlaced=/Game/Blueprints/Bowling/BP_DestroyBallGutter_Base.BP_DestroyBallGutter_Base;
+RecentlyPlaced=/Game/Blueprints/Bowling/BP_BallSpawner.BP_BallSpawner;
+RecentlyPlaced=/Game/FBX_Models/Bowling/FearHead/Pieces/Head_FearV1ReSetPivot_teeth_baseMesh.Head_FearV1ReSetPivot_teeth_baseMesh;
+RecentlyPlaced=/Game/FBX_Models/Bowling/FearHead/Pieces/Head_FearV1ReSetPivot_severedhead_fearv1Mesh.Head_FearV1ReSetPivot_severedhead_fearv1Mesh;
+RecentlyPlaced=/Game/FBX_Models/Bowling/FearHead/Pieces/Head_FearV1ReSetPivot_low-polyMesh.Head_FearV1ReSetPivot_low-polyMesh;
+RecentlyPlaced=/Game/FBX_Models/Bowling/FearHead/Pieces/Head_FearV1ReSetPivot_eyebrow009Mesh.Head_FearV1ReSetPivot_eyebrow009Mesh;
+RecentlyPlaced=/Game/FBX_Models/Bowling/AngryHead/AngryBall_StaticMesh.AngryBall_StaticMesh;
+RecentlyPlaced=/Game/FBX_Models/Bowling/AngryHead/Pieces/HeadAngryV1ReSetPivot_teeth_shape02Mesh.HeadAngryV1ReSetPivot_teeth_shape02Mesh;
+RecentlyPlaced=/Game/FBX_Models/Bowling/AngryHead/Pieces/HeadAngryV1ReSetPivot_short04Mesh.HeadAngryV1ReSetPivot_short04Mesh;
+RecentlyPlaced=/Game/FBX_Models/Bowling/AngryHead/Pieces/HeadAngryV1ReSetPivot_severedhead_angryv1Mesh.HeadAngryV1ReSetPivot_severedhead_angryv1Mesh;
+RecentlyPlaced=/Game/FBX_Models/Bowling/AngryHead/Pieces/HeadAngryV1ReSetPivot_high-polyMesh.HeadAngryV1ReSetPivot_high-polyMesh;
+RecentlyPlaced=/Game/FBX_Models/Bowling/AngryHead/Pieces/HeadAngryV1ReSetPivot_eyebrow008Mesh.HeadAngryV1ReSetPivot_eyebrow008Mesh;
+RecentlyPlaced=/Game/ParticleEffects/Maze/M_RideBlood.M_RideBlood;
 RecentlyPlaced=/Game/FBX_Models/Menu/Dome/BubbleV1.BubbleV1;
+RecentlyPlaced=/Game/Blueprints/ClownBall/BP_RespawnBall_PickUp.BP_RespawnBall_PickUp;
 RecentlyPlaced=/Game/Blueprints/ClownBall/BP_RespawnEye_Base.BP_RespawnEye_Base;
 RecentlyPlaced=/Game/Blueprints/ClownBall/BP_DestroyBall_Base.BP_DestroyBall_Base;
 RecentlyPlaced=/Game/Blueprints/HeartBall/BP_ClownBallScoreDisplay.BP_ClownBallScoreDisplay;
 RecentlyPlaced=/Game/Blueprints/ClownBall/BP_ClownBallTarget_Base.BP_ClownBallTarget_Base;
-RecentlyPlaced=/Game/Blueprints/ClownBall/BP_BallSpawner.BP_BallSpawner;
-RecentlyPlaced=/Game/Blueprints/HeartBall/BP_BatSpawner.BP_BatSpawner;
-RecentlyPlaced=/Game/Blueprints/HeartBall/BP_HeartSpawner.BP_HeartSpawner;
-RecentlyPlaced=/Game/Blueprints/HeartBall/BP_HeartBallScoreDisplay.BP_HeartBallScoreDisplay;
-RecentlyPlaced=/Game/Blueprints/HeartBall/BP_HeartBallTarget_Base.BP_HeartBallTarget_Base;
-RecentlyPlaced=/Game/Blueprints/Maze/BP_Ride_RandomSpawnerBottles.BP_Ride_RandomSpawnerBottles;
-RecentlyPlaced=/Game/Blueprints/Maze/BP_Ride_RandomSpawnerJumpScare.BP_Ride_RandomSpawnerJumpScare;
-RecentlyPlaced=/Game/Blueprints/Menu/BP_Menu_RandomSpawnerVolume.BP_Menu_RandomSpawnerVolume;
-RecentlyPlaced=/Game/FBX_Models/KnifeThrow/Axe/Axe_StaticMesh.Axe_StaticMesh;
-RecentlyPlaced=/Game/FBX_Models/KnifeThrow/Axe/AxePieces/AxeTexV1_Cylinder_023.AxeTexV1_Cylinder_023;
-RecentlyPlaced=/Game/FBX_Models/KnifeThrow/Axe/AxePieces/AxeTexV1_Cylinder_013.AxeTexV1_Cylinder_013;
-RecentlyPlaced=/Game/FBX_Models/KnifeThrow/Axe/AxePieces/AxeTexV1_Cylinder_004.AxeTexV1_Cylinder_004;
-RecentlyPlaced=/Game/FBX_Models/KnifeThrow/Axe/AxePieces/AxeTexV1_Cylinder_003.AxeTexV1_Cylinder_003;
-RecentlyPlaced=/Game/FBX_Models/KnifeThrow/Axe/AxePieces/AxeTexV1_Cylinder_002.AxeTexV1_Cylinder_002;
 None=======
 None=======
 None=======
@@ -2418,12 +2430,12 @@ None=======
 BP__BottlesRandomSpawner_C=
 
 [MessageLog]
-LastLogListing=LoadErrors
+LastLogListing=FBXImport
 
 [RootWindow]
-ScreenPosition=X=6.000 Y=17.000
+ScreenPosition=X=-8.000 Y=17.000
 WindowSize=X=1577.000 Y=821.000
-InitiallyMaximized=True
+InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -2446,7 +2458,7 @@ FBXAnim=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 GenericImport=C:/Users/Matt/Desktop/IMG_1406.PNG
 GenericImport=C:/Users/Matt/Desktop/FearBall_Maps/Skin/FearBall_AmbientOcclusionMap.png
 GenericImport=C:/Users/Matt/Desktop/AngryBall_Mat/Angryteeth/Angryteeth_AmbientOcclusionMap.png
-GenericImport=C:/Users/Matt/Desktop/JP_Demented circus track (progress mix 1).wav
+GenericImport=F:/_CIU/_FinalProjectWork/_Original Assets/Bowling/BowlingBalls/Head_FearV1ReSetPivot.fbx
 None=======
 None=======
 None=======
@@ -3089,7 +3101,7 @@ SphereComponent=SphereComponent.Collision.Collision,
 K2Node_CustomEvent=K2Node_CustomEvent.Inputs.InputArgument0,
 K2Node_CustomEvent=
 ArrayProperty=ArrayProperty.DefaultValueCategory.None,
-ArrayProperty=
+ArrayProperty=ArrayProperty.DefaultValueCategory.None,
 None=======
 None=======
 None=======
@@ -3430,6 +3442,15 @@ None=======
 /Game/FBX_Models/Menu/Dome/BubbleV1.BubbleV1=0
 /Game/_Scenes/VR_Menu.VR_Menu:PersistentLevel.AmbientSound_Circus_RightPA2.AmbientSound_Circus_RightPA2_SoundCue=0
 /Game/_Scenes/VR_Menu.VR_Menu:PersistentLevel.AmbientSound_Circus_RightPA.AmbientSound_Circus_RightPA_SoundCue=0
+/Game/FBX_Models/Bowling/AngryHead/Pieces/HeadAngryV1ReSetPivot_eyebrow008Mesh.HeadAngryV1ReSetPivot_eyebrow008Mesh=0
+/Game/FBX_Models/Bowling/AngryHead/Pieces/HeadAngryV1ReSetPivot_high-polyMesh.HeadAngryV1ReSetPivot_high-polyMesh=0
+/Game/FBX_Models/Bowling/AngryHead/Pieces/HeadAngryV1ReSetPivot_severedhead_angryv1Mesh.HeadAngryV1ReSetPivot_severedhead_angryv1Mesh=0
+/Game/FBX_Models/Bowling/AngryHead/Pieces/HeadAngryV1ReSetPivot_short04Mesh.HeadAngryV1ReSetPivot_short04Mesh=0
+/Game/FBX_Models/Bowling/AngryHead/Pieces/HeadAngryV1ReSetPivot_teeth_shape02Mesh.HeadAngryV1ReSetPivot_teeth_shape02Mesh=0
+/Game/FBX_Models/Bowling/FearHead/Head_FearV1ReSetPivot_teeth_baseMesh.Head_FearV1ReSetPivot_teeth_baseMesh=1
+/Game/Blueprints/Bowling/BP_BallSpawner.BP_BallSpawner=0
+/Game/Blueprints/Bowling/BP_DestroyBallGutter_Base.BP_DestroyBallGutter_Base=0
+/Game/Blueprints/Bowling/BP_DestroyBallFloorBase.BP_DestroyBallFloorBase=0
 
 [MaterialEditor]
 PrimType=1
