--- a/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -77,13 +77,13 @@ GridEnabled=False
 CurrentPosGridSize=1
 
 [MRU]
-MRUItem0=/Game/_Scenes/Bowling
-MRUItem1=/Game/_Scenes/VR_Menu
-MRUItem2=/Game/_Scenes/ClownBall
+MRUItem0=/Game/_Scenes/Maze
+MRUItem1=/Game/_Scenes/KnifeThrow
+MRUItem2=/Game/_Scenes/IntroScene
 MRUItem3=/Game/_Scenes/HeartBall
-MRUItem4=/Game/_Scenes/Maze
-MRUItem5=/Game/_Scenes/KnifeThrow
-MRUItem6=/Game/_Scenes/IntroScene
+MRUItem4=/Game/_Scenes/ClownBall
+MRUItem5=/Game/_Scenes/VR_Menu
+MRUItem6=/Game/_Scenes/Bowling
 MRUItem7=/Game/VirtualRealityBP/Maps/MotionControllerMap
 
 [LightingBuildOptions]
@@ -97,7 +97,7 @@ ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.SelectedPaths=/Game/Blueprints/GameInstance
 ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.SelectedPaths=/Game/Blueprints/HeartBall
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Bowling
+ContentBrowserTab1.SelectedPaths=/Game/_Scenes
 None=======
 None=======
 None=======
@@ -150,7 +150,7 @@ LastLevel=/Game/_Scenes/Maze
 LastLevel=/Game/_Scenes/HeartBall
 LastLevel=/Game/_Scenes/Bowling
 LastLevel=/Game/_Scenes/VR_Menu
-LastLevel=/Game/_Scenes/Bowling
+LastLevel=/Game/_Scenes/Maze
 None=======
 None=======
 None=======
@@ -2324,11 +2324,20 @@ BP_DestroyBallFloorBase_C.Input=True
 BP_DestroyBallFloorBase_C.Actor=True
 BP_DestroyBallFloorBase_C.Tick=True
 BP_DestroyBallFloorBase_C.Replication=True
+MaterialMergeOptions.OutputMaterialSettings=True
+MaterialOptions.MeshSettings=True
+MaterialOptions.MaterialBakeSettings=True
+BP_StartActivity_C.Tick=True
+BP_StartActivity_C.Rendering=True
+BP_StartActivity_C.Replication=True
+BP_StartActivity_C.Input=True
+BP_StartActivity_C.Actor=True
+BP_StartActivity_C.TransformCommon=True
 
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 NavModifierVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-Volume="\"Object.PostProcessVolumeSettings.Settings.ColorSaturationShadows\" \"Object.PostProcessVolumeSettings.Settings.FilmWhitePoint\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PostProcessVolume="\"Object.PostProcessVolumeSettings.Settings.ColorSaturationShadows\" \"Object.PostProcessVolumeSettings.Settings.FilmWhitePoint\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
@@ -2348,13 +2357,13 @@ CableComponent="\"Object.Cable.AttachEndTo\" \"Object.Cable.EndLocation\" "
 MeshComponent=
 PrimitiveComponent=
 PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
-PrimitiveComponent=
+PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 SceneComponent=
 SceneComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
-SceneComponent=
+SceneComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 ActorComponent=
 ActorComponent=
-ActorComponent=
+ActorComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 KillZVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 KillZVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 KillZVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -2364,13 +2373,13 @@ PhysicsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.ImportSettings.AssetImportData\" \"Object.ImportSettings.AssetImportData.Object.File Path\" "
 StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" \"Object.ImportSettings.AssetImportData\" \"Object.ImportSettings.AssetImportData.Object.File Path\" "
 StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[1]\" "
-StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" \"Object.ImportSettings.AssetImportData\" \"Object.ImportSettings.AssetImportData.Object.File Path\" "
+StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.ImportSettings.AssetImportData\" \"Object.ImportSettings.AssetImportData.Object.File Path\" "
 BP_Heart_C=
 StaticMeshActor=
 REINST_BP_Heart_C_514="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 StaticMeshComponent=
 BoxComponent=
-ShapeComponent=
+ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
@@ -2402,6 +2411,12 @@ BP_Ride_RandomSpawnerJumpScare_C=
 BP_Ride_RandomSpawnerBottles_C="\"Object.Default.ActorList\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/Blueprints/HeartBall/BP_StartActivity.BP_StartActivity;
+RecentlyPlaced=/Game/FBX_Models/Menu/Dome/BubbleV1.BubbleV1;
+RecentlyPlaced=/Engine/BasicShapes/Sphere.Sphere;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
+RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Blueprints/Bowling/BP_DestroyBallFloorBase.BP_DestroyBallFloorBase;
 RecentlyPlaced=/Game/Blueprints/Bowling/BP_DestroyBallGutter_Base.BP_DestroyBallGutter_Base;
 RecentlyPlaced=/Game/Blueprints/Bowling/BP_BallSpawner.BP_BallSpawner;
@@ -2416,12 +2431,6 @@ RecentlyPlaced=/Game/FBX_Models/Bowling/AngryHead/Pieces/HeadAngryV1ReSetPivot_s
 RecentlyPlaced=/Game/FBX_Models/Bowling/AngryHead/Pieces/HeadAngryV1ReSetPivot_high-polyMesh.HeadAngryV1ReSetPivot_high-polyMesh;
 RecentlyPlaced=/Game/FBX_Models/Bowling/AngryHead/Pieces/HeadAngryV1ReSetPivot_eyebrow008Mesh.HeadAngryV1ReSetPivot_eyebrow008Mesh;
 RecentlyPlaced=/Game/ParticleEffects/Maze/M_RideBlood.M_RideBlood;
-RecentlyPlaced=/Game/FBX_Models/Menu/Dome/BubbleV1.BubbleV1;
-RecentlyPlaced=/Game/Blueprints/ClownBall/BP_RespawnBall_PickUp.BP_RespawnBall_PickUp;
-RecentlyPlaced=/Game/Blueprints/ClownBall/BP_RespawnEye_Base.BP_RespawnEye_Base;
-RecentlyPlaced=/Game/Blueprints/ClownBall/BP_DestroyBall_Base.BP_DestroyBall_Base;
-RecentlyPlaced=/Game/Blueprints/HeartBall/BP_ClownBallScoreDisplay.BP_ClownBallScoreDisplay;
-RecentlyPlaced=/Game/Blueprints/ClownBall/BP_ClownBallTarget_Base.BP_ClownBallTarget_Base;
 None=======
 None=======
 None=======
@@ -2430,10 +2439,10 @@ None=======
 BP__BottlesRandomSpawner_C=
 
 [MessageLog]
-LastLogListing=FBXImport
+LastLogListing=LightingResults
 
 [RootWindow]
-ScreenPosition=X=-8.000 Y=17.000
+ScreenPosition=X=5.000 Y=9.000
 WindowSize=X=1577.000 Y=821.000
 InitiallyMaximized=False
 
@@ -3174,6 +3183,7 @@ PaperRuntimeSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
 TcpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
 UdpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
 WmfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+StaticMeshActor=StaticMeshActor.Collision.Collision,
 
 [FBX_Import_UI_Option_FbxStaticMeshImportData]
 StaticMeshLODGroup=None
@@ -3451,6 +3461,8 @@ None=======
 /Game/Blueprints/Bowling/BP_BallSpawner.BP_BallSpawner=0
 /Game/Blueprints/Bowling/BP_DestroyBallGutter_Base.BP_DestroyBallGutter_Base=0
 /Game/Blueprints/Bowling/BP_DestroyBallFloorBase.BP_DestroyBallFloorBase=0
+/Game/FBX_Models/HeartBall/FemaleModel/HeartBallModelV2_SackOn.HeartBallModelV2_SackOn=0
+/Game/Blueprints/HeartBall/BP_StartActivity.BP_StartActivity=0
 
 [MaterialEditor]
 PrimType=1
